--- a/scss/_assets.scss
+++ b/scss/_assets.scss
@@ -1,1 +1,6 @@
-$maingreen: #607f38;
+$lightblue: rgba(209, 250, 255, 1);
+$midblue: rgba(155, 209, 229, 1);
+$darkblue: rgba(28, 103, 168, 1);
+$midgreen: rgba(87, 167, 115, 1);
+$darkgreen: rgba(21, 113, 69, 1);
+$backgroundshade: rgba(255, 255, 255, 0.5);
