--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -14,7 +14,9 @@
         font-size: 1em;
     }
     #headerTitle {
-        background-color: rgba(255, 255, 255, 0.5);
+        background-color: $lightblue;
+        box-shadow: 5px 5px 5px rgba(0, 0, 0, .4);
+        color: $darkblue;
         position: absolute;
         right: 0;
         text-align: right;
@@ -38,7 +40,7 @@
         
         p {
             width: 100%;
-            border: 1px solid black;
+            border: 1px solid $darkblue;
             margin: 0 12px 16px 12px;
             &:first-child{
             margin-right: 12px;
